controls/terraform-best-practices/ec2/api/check-ec2-admin-ports-ingress/test/bad-test/bad-payload-01.json
{
    "SecurityGroups": [
        {
            "Description": "Non-compliant SG, allows SSH from anywhere",
            "GroupName": "bad-sg-01",
            "IpPermissions": [
                {
                    "FromPort": 22,
                    "IpProtocol": "tcp",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 22,
                    "UserIdGroupPairs": []
                }
            ],
            "OwnerId": "xxxx",
            "GroupId": "sg-00306d6dc2bcf8a5c",
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": []
                }
            ],
            "VpcId": "vpc-0a0e88c4f0aa13753"
        }
    ]
}
