controls/terraform-best-practices/ec2/api/check-ec2-admin-ports-ingress/test/bad-test/bad-payload-02.json
{
    "SecurityGroups": [
        {
            "Description": "Non-compliant SG, allows RDP from anywhere",
            "GroupName": "bad-sg-02",
            "IpPermissions": [
                {
                    "FromPort": 3389,
                    "IpProtocol": "tcp",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 3389,
                    "UserIdGroupPairs": []
                }
            ],
            "OwnerId": "xxxx",
            "GroupId": "sg-05160c7cdff110552",
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": []
                }
            ],
            "VpcId": "vpc-0a0e88c4f0aa13753"
        }
    ]
}
